#459: fixed list creation for Java 1.8